# HexIII

./: .gitignore  .gitignore~
HexIII_CX/HexIII_Adaptive/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Control.cpp  Control.h  Gait.cpp  Gait.h  HexIII_Adaptive.files  Hexapod_Robot.h  Kinect_Test.cpp  Kinect_Test.h  Makefile  Server.cpp  Server.h  Vision_Client.cpp  cmake_install.cmake  main.cpp
HexIII_CX/HexIII_Avoid/: CMakeCache.txt  CMakeLists.txt~  Client.cpp  Client.h  Control.cpp  Control.h  Gait.h  Kinect_Test.cpp  Makefile  Server.cpp  Server.h  Vision_Client.cpp  cmake_install.cmake  kinect_test.cpp  main.cpp
HexIII_CX/HexIII_Calibration/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Control.cpp  Control.h  Gait.cpp  Gait.h  HexIII_Calibration.files  Kinect_Test.cpp  Kinect_Test.h  Log_2015_04_15_16_59_Wed.botlog  Log_2015_04_15_17_01_Wed.botlog  Log_2015_04_15_21_49_Wed.botlog  Log_2015_04_16_16_09_Thu.botlog  Makefile  Server.cpp  Server.h  Vision_Client.cpp  Vision_Client.h  cmake_install.cmake  kinect.cpp  kinect.h  main.cpp
HexIII_CX/HexIII_Safe/: CMakeCache.txt  CMakeLists.txt~  Control.cpp  Control.h  Gait.cpp  Gait.h  HexIII_Safe.files  Kinect_Test.cpp  Kinect_Test.cpp.save  Makefile  Server.cpp  Vision_Client.cpp  main.cpp
HexIII_CX/HexIII_Vision/: CMakeCache.txt  CMakeLists.txt~  Client.cpp  Control.cpp  Control.h  Gait.cpp  Gait.h  HexIII_Vision.files  HexIII_Vision.includes  Hexapod_Robot.cpp  Kinect_Test.cpp  (+7 more)
HexIII_CX/pointcloud/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kinect.cpp  kinectpointcloud  pointcloud.files
(+22 files in other folders)
